Fixes overflow-X problem. Removes scroll from drawer, as per Jess.

--- a/_sass/base/blocks/_results.scss
+++ b/_sass/base/blocks/_results.scss
@@ -160,9 +160,9 @@
   background-color: $mid-gray;
   min-height: 900px; //TODO make this auto
 
-  @include respond-to(medium-up) {
-    @include span-columns(13 of 16);
-  }
+  // @include respond-to(medium-up) {
+  //   @include span-columns(13 of 16);
+  // }
 }
 
 .results-main-schools {
@@ -242,7 +242,6 @@
   ul {
     @include font-size(0.9);
     font-weight: bold;
-    //padding-bottom: $base-padding;
   }
 
   h1 {
@@ -260,8 +259,8 @@
 
   @include respond-to(large-up) {
     @include omega-reset(2n);
-    @include span-columns(4);
-    @include omega(3n);
+    @include span-columns(3);
+    @include omega(4n);
   }
 }
 
