--- a/_sass/base/components/_drawer.scss
+++ b/_sass/base/components/_drawer.scss
@@ -63,7 +63,7 @@ $drawer-width-medium_up: 30%;
 html,
 body {
     //height: 100%;
-    //overflow: hidden;
+    overflow-x: hidden;
 }
 
 // gets the actual input out of the way;
@@ -107,10 +107,9 @@ body {
 #drawer {
   position: absolute;
   left: -$drawer-width;
-  height: 100%;
   width: $drawer-width;
   background: $white;
-  overflow-x: hidden;
+  //overflow-x: hidden;
   padding-top: $base-padding-extra;
   padding-left: $base-padding;
   -webkit-overflow-scrolling: touch;
@@ -135,7 +134,7 @@ body {
 
 // checked styles (menu open state)
 
--toggle:checked ~ #drawer-toggle-label {
+#drawer-toggle:checked ~ #drawer-toggle-label {
   height: 100%;
   width: calc(100% - $drawer-width);
 
